# triangle

./: CMakeLists.txt  README.md  main.cpp  openglwindow.cpp  openglwindow.h
